--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+spring.devtools.restart.additional-paths=src/main/resources
+spring.web.resources.static-locations=file:src/main/resources/static/
+spring.thymeleaf.prefix=file:src/main/resources/templates/
